--- a/app/src/main/res/layout/course_activity.xml
+++ b/app/src/main/res/layout/course_activity.xml
@@ -114,7 +114,7 @@
     <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/list_button_layout_height"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
@@ -131,7 +131,7 @@
             android:layout_height="wrap_content"
             android:onClick="openAssessmentList"
             android:text="@string/assessment_list_button_text"
-            android:textSize="@dimen/text_size_18" />
+            android:textSize="@dimen/list_button_text_size" />
 
         <Button
             android:id="@+id/mentorListButton"
@@ -140,7 +140,7 @@
             android:layout_height="wrap_content"
             android:onClick="openMentorList"
             android:text="@string/mentor_list_button_text"
-            android:textSize="@dimen/text_size_18" />
+            android:textSize="@dimen/list_button_text_size" />
 
 
     </LinearLayout>
