--- a/app/src/main/res/layout-land/course_activity.xml
+++ b/app/src/main/res/layout-land/course_activity.xml
@@ -127,17 +127,37 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:orientation="vertical"
             android:layout_height="match_parent"
-            android:layout_weight="0.50">
+            android:layout_weight="0.50"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/courseNoteTextView"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/control_height_48"
-                android:gravity="center_vertical|start"
-                android:text="@string/courseNoteTextView_Text"
-                android:textSize="@dimen/text_size_18" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/courseNoteTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/control_height_48"
+                    android:gravity="center_vertical|start"
+                    android:text="@string/courseNoteTextView_Text"
+                    android:textSize="@dimen/text_size_18"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_toLeftOf="@+id/courseCameraButton"
+                    android:layout_toStartOf="@+id/courseCameraButton" />
+
+                <ImageButton
+                    android:id="@+id/courseCameraButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:contentDescription="@string/open_the_camera"
+                    android:onClick="courseCameraButton_onClick"
+                    android:src="@android:drawable/ic_menu_camera" />
+            </RelativeLayout>
 
             <EditText
                 android:id="@+id/courseNoteEditText"
@@ -164,7 +184,7 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="openAssessmentList"
+            android:onClick="assessmentListButton_onClick"
             android:text="@string/assessment_list_button_text"
             android:textSize="@dimen/list_button_text_size" />
 
@@ -173,7 +193,7 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="openMentorList"
+            android:onClick="mentorListButton_onClick"
             android:text="@string/mentor_list_button_text"
             android:textSize="@dimen/list_button_text_size" />
 
