--- a/app/src/main/res/layout-land/assessment_activity.xml
+++ b/app/src/main/res/layout-land/assessment_activity.xml
@@ -142,13 +142,34 @@
         android:layout_weight="0.50"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/assessmentNoteTextView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/control_height_48"
-            android:gravity="center_vertical|start"
-            android:text="@string/assessmentNoteTextView_Text"
-            android:textSize="@dimen/text_size_18" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/assessmentNoteTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/control_height_48"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_toLeftOf="@+id/assessmentCameraButton"
+                android:layout_toStartOf="@+id/assessmentCameraButton"
+                android:gravity="center_vertical|start"
+                android:text="@string/assessmentNoteTextView_Text"
+                android:textSize="@dimen/text_size_18" />
+
+            <ImageButton
+                android:id="@+id/assessmentCameraButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:contentDescription="@string/open_the_camera"
+                android:onClick="assessmentCameraButton_onClick"
+                android:src="@android:drawable/ic_menu_camera" />
+
+        </RelativeLayout>
 
         <EditText
             android:id="@+id/assessmentNoteEditText"
