--- a/app/src/main/res/layout-land/assessment_activity.xml
+++ b/app/src/main/res/layout-land/assessment_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -165,9 +166,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
+                android:background="?android:selectableItemBackground"
                 android:contentDescription="@string/open_the_camera"
                 android:onClick="assessmentCameraButton_onClick"
-                android:src="@android:drawable/ic_menu_camera" />
+                app:srcCompat="@drawable/ic_action_camera" />
 
         </RelativeLayout>
 
