--- a/app/src/main/res/layout-land/course_activity.xml
+++ b/app/src/main/res/layout-land/course_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/courseActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -156,7 +157,8 @@
                     android:layout_alignParentRight="true"
                     android:contentDescription="@string/open_the_camera"
                     android:onClick="courseCameraButton_onClick"
-                    android:src="@android:drawable/ic_menu_camera" />
+                    android:background="?android:selectableItemBackground"
+                    app:srcCompat="@drawable/ic_action_camera" />
             </RelativeLayout>
 
             <EditText
