--- a/app/src/main/res/layout/course_activity.xml
+++ b/app/src/main/res/layout/course_activity.xml
@@ -136,6 +136,20 @@
         android:inputType="textMultiLine" />
 
     <ImageButton
+        android:id="@+id/courseShareButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentRight="false"
+        android:layout_below="@+id/courseStatusSpinner"
+        android:contentDescription="@string/share"
+        android:onClick="courseShareButton_onClick"
+        android:background="?android:selectableItemBackground"
+        app:srcCompat="@drawable/ic_action_share"
+        android:layout_toLeftOf="@+id/courseCameraButton"
+        android:layout_toStartOf="@+id/courseCameraButton" />
+
+    <ImageButton
         android:id="@+id/courseCameraButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
