--- a/app/src/main/res/menu/menu_delete.xml
+++ b/app/src/main/res/menu/menu_delete.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.wgu.TermActivity">
     <item
-        android:id="@+id/action_delete_term"
+        android:id="@+id/action_delete_record"
         android:icon="@drawable/ic_action_delete"
         android:orderInCategory="100"
         android:title="@string/action_delete"
